WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197593
fast/attachment/attachment-folder-icon.html is an Image Only failure on recent macOS builds
https://bugs.webkit.org/show_bug.cgi?id=197593
Summary
fast/attachment/attachment-folder-icon.html is an Image Only failure on recen...
Wenson Hsieh
Reported
2019-05-04 16:47:14 PDT
<
rdar://problem/50379267
>
Attachments
Patch
(2.25 KB, patch)
2019-05-04 16:56 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews213 for win-future
(13.59 MB, application/zip)
2019-05-04 20:56 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-05-04 16:56:18 PDT
Created
attachment 369075
[details]
Patch
EWS Watchlist
Comment 2
2019-05-04 20:56:55 PDT
Comment hidden (obsolete)
Comment on
attachment 369075
[details]
Patch
Attachment 369075
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12102586
New failing tests: http/tests/security/local-video-src-from-remote.html
EWS Watchlist
Comment 3
2019-05-04 20:56:57 PDT
Comment hidden (obsolete)
Created
attachment 369084
[details]
Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Tim Horton
Comment 4
2019-05-05 03:18:57 PDT
Comment on
attachment 369075
[details]
Patch Do we need the same change in RenderThemeIOS?
WebKit Commit Bot
Comment 5
2019-05-05 03:45:27 PDT
Comment on
attachment 369075
[details]
Patch Clearing flags on attachment: 369075 Committed
r244956
: <
https://trac.webkit.org/changeset/244956
>
WebKit Commit Bot
Comment 6
2019-05-05 03:45:29 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 7
2019-05-05 13:38:47 PDT
(In reply to Tim Horton from
comment #4
)
> Comment on
attachment 369075
[details]
> Patch > > Do we need the same change in RenderThemeIOS?
I don't believe we do, since this logic to convert these MIME types to a UTI for an icon only exists on macOS. That being said, there is another issue that needs to be addressed, which is that currently, dropping or pasting folders on both macOS and iOS using the new attachments SPI will create attachments with type "public.directory" instead of "public.folder". I plan to fix this separately.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug