fast/attachment/attachment-folder-icon.html is an Image Only failure on recent macOS builds https://bugs.webkit.org/show_bug.cgi?id=197593 <rdar://problem/50379267>

Reviewed by Tim Horton.

On recent versions of macOS, -[NSWorkspace iconForFileType:] returns the generic document icon for
"public.directory". Instead of using this UTI to generate attachment icons for "multipart/x-folder" and
"application/vnd.apple.folder", we should instead be using "public.folder", which has a folder icon. This fixes
the existing test fast/attachment/attachment-folder-icon.html, which currently results in an image diff on these
builds of macOS.

* rendering/RenderThemeMac.mm:
(WebCore::iconForAttachment):


Canonical link: https://commits.webkit.org/211745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244956 268f45cc-cd09-0410-ab3c-d52691b4dbfc